<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="reset"
        android:layout="@layout/reset_button"/>

    <SwitchPreferenceCompat
        android:title="@string/high_contrast_theme"
        android:key="theme"
        android:defaultValue="false"
        />

    <SwitchPreferenceCompat
        android:title="@string/show_spectrogram"
        android:key="show_spectrogram"
        android:summary="@string/summary_show_spectrogram"
        android:defaultValue="false"/>

    <SwitchPreferenceCompat
        android:title="@string/show_images"
        android:key="show_images"
        android:defaultValue="false"/>

    <ListPreference
        app:defaultValue="9"
        app:entries="@array/audio_source_entries"
        app:entryValues="@array/audio_source_values"
        app:key="audio_source"
        app:title="@string/settings_audiosource"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreference
        android:key="bluetooth"
        android:title="@string/bluetooth_connection"
        android:defaultValue="false"/>

    <org.tensorflow.lite.examples.soundclassifier.EditTextSeekBarPreference
        android:title="@string/settings_highpass"
        android:key="high_pass"
        android:max="1000"
        android:defaultValue="0"
        app:showSeekBarValue="true"
        />

    <org.tensorflow.lite.examples.soundclassifier.EditTextSeekBarPreference
        android:title="@string/settings_threshold"
        android:key="model_threshold"
        android:max="100"
        android:defaultValue="55"
        app:showSeekBarValue="true"
        />

    <SwitchPreferenceCompat
        android:title="@string/settings_meta_extended"
        android:key="meta_extended"
        android:summary="@string/summary_meta_extended"
        android:defaultValue="true"
        />

    <SwitchPreferenceCompat
        android:title="@string/settings_notification_sound"
        android:key="play_sound"
        android:defaultValue="false"
        />

    <SwitchPreferenceCompat
        android:title="@string/save_wav"
        android:summary="@string/summary_save_wav"
        android:key="write_wav"
        android:defaultValue="false"
        />

    <org.woheller69.preferences.EditTextSwitchPreference
        android:selectable="true"
        app:useSimpleSummaryProvider="true"
        android:key="manual_location_value"
        app:SwitchKey="manual_location"
        app:SwitchKeyDefaultValue="false"
        android:defaultValue="0.000/0.000"
        android:title="@string/manual_location" />

    <Preference
        android:key="language"
        android:layout="@layout/language_button"/>

    <PreferenceCategory android:title="@string/settings_sync_category">

        <SwitchPreferenceCompat
            android:key="sync_enabled"
            android:title="@string/settings_sync_enabled"
            android:summary="@string/settings_sync_enabled_summary"
            android:defaultValue="false" />

        <Preference
            android:key="sync_pair"
            android:title="@string/settings_sync_pair"
            android:summary="@string/settings_sync_pair_summary" />

        <EditTextPreference
            android:key="sync_pi_url"
            android:title="@string/settings_sync_pi_url"
            android:summary="@string/settings_sync_pi_url_summary"
            android:defaultValue=""
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="sync_station_id"
            android:title="@string/settings_sync_station_id"
            android:summary="@string/settings_sync_station_id_summary"
            android:defaultValue="phone-1"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="sync_interval_sec"
            android:title="@string/settings_sync_interval"
            android:summary="@string/settings_sync_interval_summary"
            android:defaultValue="30"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:key="sync_test"
            android:title="@string/settings_sync_test"
            android:summary="@string/settings_sync_test_summary" />

    </PreferenceCategory>

</PreferenceScreen>